fixed mobile alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,6 @@ p code {
   border-right-width: 0.5rem;
   color: #EB5757;
 }
-
 ul.side-nav li {
   padding: 0;
 }
@@ -166,6 +165,11 @@ h3 {
 
 #intro.section .container h1 {
   font-weight: 500;
+  margin: 10px 0;
+}
+
+#intro-section .container h2 {
+  margin: 0;
 }
 
 #intro.section .underline {
@@ -330,6 +334,10 @@ small {
 .teal {
   background-color: #008073 !important;
 }
+
+nav a.button-collapse {
+  height: 56px!important;
+}
 @media (min-width: 1200px) {
 
 }
@@ -348,7 +356,7 @@ small {
 @media (max-width: 992px) {
   main {
     padding-left: 0px;
-    padding-top: 64px;
+    padding-top: 90px;
   }
   ul.side-nav a {
     line-height: 100%;
@@ -363,8 +371,8 @@ small {
   nav a.button-collapse,
   nav a.button-collapse i {
     color: #009688;
-    height: 56px;
-    line-height: 56px;
+    /* height: 56px; */
+    line-height: 75px;
   }
   h3 {
     padding: 20px 30px;
@@ -408,10 +416,10 @@ small {
   h3,
   .container {
     position: relative;
-    top: 64px;
+    top: 90px;
   }
   section#intro {
-    margin-bottom: -64px;
+    margin-bottom: -90px;
   }
   .card .role {
     position: relative;
